src/Skia/Bindings/Sk_font.hs

{-# LANGUAGE DeriveAnyClass #-}
{-# LANGUAGE DeriveFoldable #-}
{-# LANGUAGE DeriveFunctor #-}
{-# LANGUAGE DeriveGeneric #-}
{-# LANGUAGE DeriveTraversable #-}
{-# LANGUAGE DerivingStrategies #-}
{-# LANGUAGE DerivingVia #-}
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE EmptyCase #-}
{-# LANGUAGE ExplicitForAll #-}
{-# LANGUAGE GeneralizedNewtypeDeriving #-}
{-# LANGUAGE NamedFieldPuns #-}
{-# LANGUAGE OverloadedLabels #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE OverloadedStrings #-}
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE ScopedTypeVariables #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- | This is an auto-generated FFI binding module.
module Skia.Bindings.Sk_font where

import Foreign
import Foreign.C
import Foreign.Storable
import Foreign.Storable.Offset

import Skia.Bindings.Types


{- | C function signature:

@
sk_font_t *sk_font_new(void)
@
-}
foreign import ccall "sk_font_new" sk_font_new ::
  IO (Ptr (Sk_font)) -- ^ C return type: @"sk_font_t *"@

-- | Function pointer to 'sk_font_new'
foreign import ccall "&sk_font_new" p'sk_font_new ::
  FunPtr (IO (Ptr (Sk_font)))

{- | C function signature:

@
sk_font_t *sk_font_new_with_values(sk_typeface_t *typeface, float size, float scaleX, float skewX)
@
-}
foreign import ccall "sk_font_new_with_values" sk_font_new_with_values ::
  Ptr (Sk_typeface) -- ^ C argument @"sk_typeface_t * typeface"@
  -> CFloat -- ^ C argument @"float size"@
  -> CFloat -- ^ C argument @"float scaleX"@
  -> CFloat -- ^ C argument @"float skewX"@
  -> IO (Ptr (Sk_font)) -- ^ C return type: @"sk_font_t *"@

-- | Function pointer to 'sk_font_new_with_values'
foreign import ccall "&sk_font_new_with_values" p'sk_font_new_with_values ::
  FunPtr (Ptr (Sk_typeface) -> CFloat -> CFloat -> CFloat -> IO (Ptr (Sk_font)))

{- | C function signature:

@
void sk_font_delete(sk_font_t *font)
@
-}
foreign import ccall "sk_font_delete" sk_font_delete ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_delete'
foreign import ccall "&sk_font_delete" p'sk_font_delete ::
  FunPtr (Ptr (Sk_font) -> IO (()))

{- | C function signature:

@
_Bool sk_font_is_force_auto_hinting(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_is_force_auto_hinting" sk_font_is_force_auto_hinting ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_font_is_force_auto_hinting'
foreign import ccall "&sk_font_is_force_auto_hinting" p'sk_font_is_force_auto_hinting ::
  FunPtr (Ptr (Sk_font) -> IO (CBool))

{- | C function signature:

@
void sk_font_set_force_auto_hinting(sk_font_t *font, _Bool value)
@
-}
foreign import ccall "sk_font_set_force_auto_hinting" sk_font_set_force_auto_hinting ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> CBool -- ^ C argument @"_Bool value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_force_auto_hinting'
foreign import ccall "&sk_font_set_force_auto_hinting" p'sk_font_set_force_auto_hinting ::
  FunPtr (Ptr (Sk_font) -> CBool -> IO (()))

{- | C function signature:

@
_Bool sk_font_is_embedded_bitmaps(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_is_embedded_bitmaps" sk_font_is_embedded_bitmaps ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_font_is_embedded_bitmaps'
foreign import ccall "&sk_font_is_embedded_bitmaps" p'sk_font_is_embedded_bitmaps ::
  FunPtr (Ptr (Sk_font) -> IO (CBool))

{- | C function signature:

@
void sk_font_set_embedded_bitmaps(sk_font_t *font, _Bool value)
@
-}
foreign import ccall "sk_font_set_embedded_bitmaps" sk_font_set_embedded_bitmaps ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> CBool -- ^ C argument @"_Bool value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_embedded_bitmaps'
foreign import ccall "&sk_font_set_embedded_bitmaps" p'sk_font_set_embedded_bitmaps ::
  FunPtr (Ptr (Sk_font) -> CBool -> IO (()))

{- | C function signature:

@
_Bool sk_font_is_subpixel(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_is_subpixel" sk_font_is_subpixel ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_font_is_subpixel'
foreign import ccall "&sk_font_is_subpixel" p'sk_font_is_subpixel ::
  FunPtr (Ptr (Sk_font) -> IO (CBool))

{- | C function signature:

@
void sk_font_set_subpixel(sk_font_t *font, _Bool value)
@
-}
foreign import ccall "sk_font_set_subpixel" sk_font_set_subpixel ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> CBool -- ^ C argument @"_Bool value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_subpixel'
foreign import ccall "&sk_font_set_subpixel" p'sk_font_set_subpixel ::
  FunPtr (Ptr (Sk_font) -> CBool -> IO (()))

{- | C function signature:

@
_Bool sk_font_is_linear_metrics(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_is_linear_metrics" sk_font_is_linear_metrics ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_font_is_linear_metrics'
foreign import ccall "&sk_font_is_linear_metrics" p'sk_font_is_linear_metrics ::
  FunPtr (Ptr (Sk_font) -> IO (CBool))

{- | C function signature:

@
void sk_font_set_linear_metrics(sk_font_t *font, _Bool value)
@
-}
foreign import ccall "sk_font_set_linear_metrics" sk_font_set_linear_metrics ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> CBool -- ^ C argument @"_Bool value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_linear_metrics'
foreign import ccall "&sk_font_set_linear_metrics" p'sk_font_set_linear_metrics ::
  FunPtr (Ptr (Sk_font) -> CBool -> IO (()))

{- | C function signature:

@
_Bool sk_font_is_embolden(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_is_embolden" sk_font_is_embolden ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_font_is_embolden'
foreign import ccall "&sk_font_is_embolden" p'sk_font_is_embolden ::
  FunPtr (Ptr (Sk_font) -> IO (CBool))

{- | C function signature:

@
void sk_font_set_embolden(sk_font_t *font, _Bool value)
@
-}
foreign import ccall "sk_font_set_embolden" sk_font_set_embolden ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> CBool -- ^ C argument @"_Bool value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_embolden'
foreign import ccall "&sk_font_set_embolden" p'sk_font_set_embolden ::
  FunPtr (Ptr (Sk_font) -> CBool -> IO (()))

{- | C function signature:

@
_Bool sk_font_is_baseline_snap(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_is_baseline_snap" sk_font_is_baseline_snap ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_font_is_baseline_snap'
foreign import ccall "&sk_font_is_baseline_snap" p'sk_font_is_baseline_snap ::
  FunPtr (Ptr (Sk_font) -> IO (CBool))

{- | C function signature:

@
void sk_font_set_baseline_snap(sk_font_t *font, _Bool value)
@
-}
foreign import ccall "sk_font_set_baseline_snap" sk_font_set_baseline_snap ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> CBool -- ^ C argument @"_Bool value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_baseline_snap'
foreign import ccall "&sk_font_set_baseline_snap" p'sk_font_set_baseline_snap ::
  FunPtr (Ptr (Sk_font) -> CBool -> IO (()))

{- | C function signature:

@
sk_font_edging_t sk_font_get_edging(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_get_edging" sk_font_get_edging ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (Sk_font_edging) -- ^ C return type: @"sk_font_edging_t"@

-- | Function pointer to 'sk_font_get_edging'
foreign import ccall "&sk_font_get_edging" p'sk_font_get_edging ::
  FunPtr (Ptr (Sk_font) -> IO (Sk_font_edging))

{- | C function signature:

@
void sk_font_set_edging(sk_font_t *font, sk_font_edging_t value)
@
-}
foreign import ccall "sk_font_set_edging" sk_font_set_edging ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> Sk_font_edging -- ^ C argument @"sk_font_edging_t value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_edging'
foreign import ccall "&sk_font_set_edging" p'sk_font_set_edging ::
  FunPtr (Ptr (Sk_font) -> Sk_font_edging -> IO (()))

{- | C function signature:

@
sk_font_hinting_t sk_font_get_hinting(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_get_hinting" sk_font_get_hinting ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (Sk_font_hinting) -- ^ C return type: @"sk_font_hinting_t"@

-- | Function pointer to 'sk_font_get_hinting'
foreign import ccall "&sk_font_get_hinting" p'sk_font_get_hinting ::
  FunPtr (Ptr (Sk_font) -> IO (Sk_font_hinting))

{- | C function signature:

@
void sk_font_set_hinting(sk_font_t *font, sk_font_hinting_t value)
@
-}
foreign import ccall "sk_font_set_hinting" sk_font_set_hinting ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> Sk_font_hinting -- ^ C argument @"sk_font_hinting_t value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_hinting'
foreign import ccall "&sk_font_set_hinting" p'sk_font_set_hinting ::
  FunPtr (Ptr (Sk_font) -> Sk_font_hinting -> IO (()))

{- | C function signature:

@
sk_typeface_t *sk_font_get_typeface(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_get_typeface" sk_font_get_typeface ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (Ptr (Sk_typeface)) -- ^ C return type: @"sk_typeface_t *"@

-- | Function pointer to 'sk_font_get_typeface'
foreign import ccall "&sk_font_get_typeface" p'sk_font_get_typeface ::
  FunPtr (Ptr (Sk_font) -> IO (Ptr (Sk_typeface)))

{- | C function signature:

@
void sk_font_set_typeface(sk_font_t *font, sk_typeface_t *value)
@
-}
foreign import ccall "sk_font_set_typeface" sk_font_set_typeface ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> Ptr (Sk_typeface) -- ^ C argument @"sk_typeface_t * value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_typeface'
foreign import ccall "&sk_font_set_typeface" p'sk_font_set_typeface ::
  FunPtr (Ptr (Sk_font) -> Ptr (Sk_typeface) -> IO (()))

{- | C function signature:

@
float sk_font_get_size(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_get_size" sk_font_get_size ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (CFloat) -- ^ C return type: @"float"@

-- | Function pointer to 'sk_font_get_size'
foreign import ccall "&sk_font_get_size" p'sk_font_get_size ::
  FunPtr (Ptr (Sk_font) -> IO (CFloat))

{- | C function signature:

@
void sk_font_set_size(sk_font_t *font, float value)
@
-}
foreign import ccall "sk_font_set_size" sk_font_set_size ::
  Ptr (Sk_font) -- ^ C argument @"sk_font_t * font"@
  -> CFloat -- ^ C argument @"float value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_font_set_size'
foreign import ccall "&sk_font_set_size" p'sk_font_set_size ::
  FunPtr (Ptr (Sk_font) -> CFloat -> IO (()))

{- | C function signature:

@
float sk_font_get_scale_x(const sk_font_t *font)
@
-}
foreign import ccall "sk_font_get_scale_x" sk_font_get_scale_x ::
  Ptr (Sk_font) -- ^ C argument @"const sk_font_t * font"@
  -> IO (CFloat) -- ^ C return type: @"float"@

-- | Function pointer to 'sk_font_get_scale_x'
foreign import ccall "&sk_font_get_scale_x" p'sk_font_get_scale_x ::
  FunPtr (Ptr (Sk_font) -> IO (CFloat))

{- | C function signature:
